Implement get ISIN
