# reference-data-api/src/main/java/com/sixgroup/referencedata/domain/TradeVO.java
@@ -1,0 +1,11 @@
+package com.sixgroup.referencedata.domain;
+
+public record TradeVO(String tradeRef,
+                      int securityId,
+                      TradeType tradeType,
+                      String isin,
+                      long quantity,
+                      long price,
+                      long timestamp) {
+
+}
