# reference-data-api/src/main/java/com/sixgroup/referencedata/infrastructure/messaging/repository/IsinKafkaRepository.java
@@ -1,4 +1,4 @@
-package com.sixgroup.referencedata.infrastructure.persistence.kafka;
+package com.sixgroup.referencedata.infrastructure.messaging.repository;
 
 import org.springframework.stereotype.Repository;
 
@@ -6,6 +6,7 @@ import com.sixgroup.avro.isin.data.IsinDataKey;
 import com.sixgroup.avro.isin.data.IsinDataValue;
 import com.sixgroup.referencedata.domain.IsinRepository;
 import com.sixgroup.referencedata.domain.IsinVO;
+import com.sixgroup.referencedata.domain.exception.IsinNotFoundException;
 import com.sixgroup.referencedata.infrastructure.mapper.IsinMapper;
 
 import lombok.RequiredArgsConstructor;
@@ -14,6 +15,7 @@ import lombok.RequiredArgsConstructor;
 @RequiredArgsConstructor
 public class IsinKafkaRepository implements IsinRepository {
 
+    private final IsinKTableRepository isinKTableRepository;
     private final IsinPublisher isinPublisher;
     private final IsinMapper isinMapper;
 
@@ -24,4 +26,10 @@ public class IsinKafkaRepository implements IsinRepository {
         isinPublisher.publishTrade(key, value);
         return isinVO;
     }
+
+    @Override
+    public IsinVO getIsinData(String isin) {
+        return isinKTableRepository.findByKey(isin).orElseThrow(() -> new IsinNotFoundException("ISIN '{}' not found, isin"));
+    }
+
 }
